--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,4 +1,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/mdalchzv/public_html/
-    - /bin/cp * $DEPLOYPATH
+    - /bin/cp -R * $DEPLOYPATH
